# blokus-duo-ai

./: .gitignore  ALGORITHM.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
champions/: v20260525_221339.json  v20260525_222926.json
crates/blokus-core/: Cargo.toml
crates/blokus-core/benches/: smoke.rs
crates/blokus-core/src/: bitboard.rs  board.rs  eval.rs  lib.rs  movegen.rs  pieces.rs  search.rs  tt.rs  zobrist.rs
crates/blokus-core/tests/: endgame_tests.rs  eval_tests.rs  perft.rs  search_tests.rs
crates/blokus-py/: Cargo.toml
crates/blokus-py/src/: lib.rs
crates/blokus-wasm/: Cargo.toml
crates/blokus-wasm/src/: lib.rs
diagnostics/games/: horizon_vs_eval_20260526_140205.json  horizon_vs_eval_20260526_140338.json  horizon_vs_eval_20260526_191337.json  horizon_vs_eval_20260526_212521.json  horizon_vs_eval_20260527_093355.json  horizon_vs_eval_20260527_093435.json  horizon_vs_eval_20260527_093855.json  horizon_vs_eval_20260527_114612.json
python/: run_gui.py  run_tune.py
python/blokus_harness/: __init__.py  harness.py  players.py  tournament.py
python/blokus_harness/gui/: __init__.py  (+1 more)
python/diagnostics/: __init__.py  depth_check.py  horizon_vs_eval.py  move_choice_breakdown.py  replay_position.py  time_budget_actual.py
python/tests/: conftest.py  test_endgame.py  test_engine.py  test_eval.py  test_gui_smoke.py  test_harness.py  test_regression_choke.py  test_smoke.py  test_tuning.py
python/tuning/: __init__.py  champion.py  matches.py  optimizer.py  sprt.py
web/: backend-wasm.js  index.html  serve.py
(+5 files in other folders)
