[package]
name = "blokus-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "WebAssembly bindings for the Blokus Duo engine (browser play)."

[lib]
name = "blokus_wasm"
crate-type = ["cdylib", "rlib"]

[dependencies]
blokus-core = { path = "../blokus-core" }
wasm-bindgen = "=0.2.100"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
